--- a/.github/workflows/pycount_tests.yml
+++ b/.github/workflows/pycount_tests.yml
@@ -32,9 +32,8 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
-
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+        
+      - name: Linting
+        uses: whynothugo/python-linting@master
 
      
