--- a/.github/workflows/pycount_tests.yml
+++ b/.github/workflows/pycount_tests.yml
@@ -61,3 +61,8 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
+          
+      - name: Exécution des tests
+        working-directory: library/pycount
+        run: python3 -m unittest
+        
