--- a/.github/workflows/firmware_tests.yml
+++ b/.github/workflows/firmware_tests.yml
@@ -1,10 +1,7 @@
-# This is a basic workflow to help you get started with Actions
 name: Test de compilation du Firmware
 
 on:
   workflow_dispatch:
-    branches: [ main ]
-    
   pull_request:
     branches: [ main ]
     
@@ -13,15 +10,7 @@ jobs:
 
     runs-on: ubuntu-latest
   
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-    - uses: actions/checkout@v2
-      with:
-        submodules: recursive
-        
-    - name: Compilation     
-      uses: arduino/compile-sketches@v1
-      with:
-        fqbn: 'arduino:avr:uno'
-        sketch-paths: '- firmware'
-        verbose: True
+    
+    - name: Compilation du firmware Arduino
+      uses: ./.github/actions/action-firmware-test
