MAJ pour faire checkout en premier.

--- a/.github/workflows/firmware_tests.yml
+++ b/.github/workflows/firmware_tests.yml
@@ -12,5 +12,10 @@ jobs:
   
     steps:
     
+    - name: Checkout
+      uses: actions/checkout@v2
+      with:
+        submodules: recursive
+        
     - name: Compilation du firmware Arduino
       uses: ./.github/actions/action-firmware-test
