--- a/.github/workflows/build_test_and_release.yml
+++ b/.github/workflows/build_test_and_release.yml
@@ -14,7 +14,64 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  build:
+  linting-pycount:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          submodules: recursive
+      - uses: actions/setup-python@v2
+        with:
+          python-version: 3.6     
+      - uses: ricardochaves/python-lint@v1.4.0
+        with:
+          python-root-list: "library/pycount"
+          use-pylint: false
+          use-pycodestyle: false
+          use-flake8: true
+          use-black: false
+          use-mypy: false
+          use-isort: false
+          extra-pylint-options: ""
+          extra-pycodestyle-options: ""
+          extra-flake8-options: "--exclude=__init__.py"
+          extra-black-options: ""
+          extra-mypy-options: ""
+          extra-isort-options: ""
+    
+  test-pycount:
+    needs: linting-pycount
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
+    
+    strategy:
+      matrix:
+        python-version: [3.6, 3.7, 3.8, 3.9]
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v2
+        with:
+          submodules: recursive
+
+      - name: Installation de Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.python-version }}
+          
+      - name: Exécution des tests
+        working-directory: library/pycount
+        run: python3 -m unittest
+
+
+
+
+
+
+  # This workflow contains a single job called "build"
+  release:
+    needs: test-pycount
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
