--- a/.github/workflows/build_test_and_release.yml
+++ b/.github/workflows/build_test_and_release.yml
@@ -153,3 +153,33 @@ jobs:
       - name: Affichage de la version
         run: echo "Version ${{ steps.generate_version_output.outputs.version }}"
         shell: bash
+        
+      - name: Création du release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
+        with:
+          tag_name: v${{ steps.generate_version_output.outputs.version }}
+          release_name: demo_integration-v${{ steps.generate_version_output.outputs.version }}
+          body: |
+              Dernière compilation de demo_integration.
+          draft: true
+          prerelease: true
+
+      - name: Écriture du fichier pour la destination du release.
+        run: echo "${{ steps.create_release.outputs.upload_url }}" > release_url.txt
+      - name: Téléversement de release_url
+        uses: actions/upload-artifact@v2
+        with:
+          name: release_url
+          path: release_url.txt
+          
+      - name: Écriture du fichier pour la version du release.
+        run: echo "${{ steps.generate_version_output.outputs.version }}" > release_version.txt
+      - name: Téléversement de release_version
+        uses: actions/upload-artifact@v2
+        with:
+          name: release_version
+          path: release_version.txt
+  
