--- a/.github/workflows/firmware_tests.yml
+++ b/.github/workflows/firmware_tests.yml
@@ -12,7 +12,7 @@ jobs:
   
     steps:
     
-    - name: Checkout
+    - name: Obtention du code
       uses: actions/checkout@v2
       with:
         submodules: recursive
