--- a/.github/workflows/pycount_tests.yml
+++ b/.github/workflows/pycount_tests.yml
@@ -53,7 +53,8 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
+      - name: Obtention du code
+        uses: actions/checkout@v2
         with:
           submodules: recursive
 
