--- a/.github/workflows/build_test_and_release.yml
+++ b/.github/workflows/build_test_and_release.yml
@@ -100,24 +100,11 @@ jobs:
         uses: paulhatch/semantic-version@v4.0.2
         id: semantic_version
         with:
-          # The prefix to use to identify tags
           tag_prefix: "v"
-          # A string which, if present in a git commit, indicates that a change represents a
-          # major (breaking) change, supports regular expressions wrapped with '/'
           major_pattern: "(MAJOR)"
-          # Same as above except indicating a minor change, supports regular expressions wrapped with '/'
           minor_pattern: "(MINOR)"
-          # A string to determine the format of the version output
           format: "${major}.${minor}.${patch}"
-          # Optional path to check for changes. If any changes are detected in the path the
-          # 'changed' output will true. Enter multiple paths separated by spaces.
-          # change_path: "src/my-service"
-          # Named version, will be used as suffix for name version tag
-          # namespace: test-auto-tag-release
-          # Indicate whether short tags like 'v1' should be supported. If false only full
-          # tags like 'v1.0.0' will be recognized.
           short_tags: false
-          # If this is set to true, *every* commit will be treated as a new version.
           bump_each_commit: true
     
       - name: Génération du numéro de version
@@ -133,7 +120,7 @@ jobs:
         id: create_release
         uses: actions/create-release@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
         with:
           tag_name: v${{ steps.generate_version_output.outputs.version }}
           release_name: demo_integration-v${{ steps.generate_version_output.outputs.version }}
