--- a/.github/workflows/build_test_and_release.yml
+++ b/.github/workflows/build_test_and_release.yml
@@ -144,4 +144,71 @@ jobs:
         with:
           name: release_version
           path: release_version.txt
+    
+  upload_cppcount:
+    needs: release
+    strategy:
+      matrix:
+        os: [ubuntu-18.04, ubuntu-20.04]
+        build-type: [Release, Debug]
+
+    runs-on: ${{ matrix.os }}
+    steps:
+    - uses: actions/checkout@v2
+      with:
+        submodules: recursive
+   
+    - uses: actions/download-artifact@v2
+      with:
+        name: release_url
+    - name: Obtention de release_url
+      id: get_release_info
+      run: |
+        echo "::set-output name=upload_url::$(cat release_url.txt)"
+       
+    - uses: actions/download-artifact@v2
+      with:
+        name: release_version   
+    - name: Obtention de release_version
+      id: get_release_version
+      run: |
+        echo "::set-output name=version::$(cat release_version.txt)"
   
+    - name: Installation des dépendances du système
+      run: | 
+        sudo apt-get update
+        sudo apt-get install ninja-build cmake build-essential python3
+    
+    - name: Création du dossier de compilation
+      working-directory: library/cppcount
+      run: |
+        mkdir build
+          
+    - name: Compilation
+      working-directory: library/cppcount/build
+      run: |
+        cmake .. -DCMAKE_BUILD_TYPE=${{ matrix.build-type}} -DCPP_COUNT_VERSION="${{steps.get_release_version.outputs.version}}" -DCMAKE_INSTALL_PREFIX=$PWD/dist
+        make install
+        
+    - name: Génération du nom de fichier
+      id: generate_release_file_name
+      run: |
+        echo "::set-output name=release_file_name::cppcount-${{ matrix.os }}-\
+        ${{ matrix.build-type }}-\
+        ${{ steps.get_release_version.outputs.version }}"
+    
+    - name: Création de l'archive
+      working-directory: library/cppcount/build/dist
+      run: |
+        tar cvzf ${{ steps.generate_release_file_name.outputs.release_file_name }}.tar.gz .
+        
+    - name: Téléversement de l'archive
+      id: upload-release-asset 
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.get_release_info.outputs.upload_url }}
+        asset_path: library/cppcount/build/dist/${{ steps.generate_release_file_name.outputs.release_file_name }}.tar.gz
+        asset_name: ${{ steps.generate_release_file_name.outputs.release_file_name }}.tar.gz
+        asset_content_type: application/x-gzip      
