--- a/.github/workflows/build_test_and_release.yml
+++ b/.github/workflows/build_test_and_release.yml
@@ -88,7 +88,7 @@ jobs:
           python3 -m pip install --upgrade build
           python3 -m build
         
-  release:
+  create_release:
     needs: [test-pycount, test-cppcount]
     runs-on: ubuntu-latest
     steps:
@@ -146,7 +146,7 @@ jobs:
           path: release_version.txt
     
   upload_cppcount:
-    needs: release
+    needs: create_release
     strategy:
       matrix:
         os: [ubuntu-18.04, ubuntu-20.04]
@@ -212,3 +212,65 @@ jobs:
         asset_path: library/cppcount/build/${{ steps.generate_release_file_name.outputs.release_file_name }}.tar.gz
         asset_name: ${{ steps.generate_release_file_name.outputs.release_file_name }}.tar.gz
         asset_content_type: application/x-gzip      
+
+  upload_cppcount_pybind11:
+    needs: create_release
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: [3.6, 3.7, 3.8, 3.9]
+    steps:
+    - name: Obtention du code
+      uses: actions/checkout@v2
+      with:
+        submodules: recursive
+
+    - name: Installation de Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v2
+      with:
+        python-version: ${{ matrix.python-version }}
+        
+    - uses: actions/download-artifact@v2
+      with:
+        name: release_url
+    - name: Obtention de release_url
+      id: get_release_info
+      run: |
+        echo "::set-output name=upload_url::$(cat release_url.txt)"
+       
+    - uses: actions/download-artifact@v2
+      with:
+        name: release_version   
+    - name: Obtention de release_version
+      id: get_release_version
+      run: |
+        echo "::set-output name=version::$(cat release_version.txt)"
+  
+    - name: Changement du numéro de version dans setup.py
+      working-directory: library/cppcount
+      run: |
+        sed -i 's/version="dev"/version="${{steps.get_release_version.outputs.version}}"/g' setup.py
+   
+    - name: Compilation
+      working-directory: library/cppcount
+      run: |
+        python3 -m pip install --upgrade pip
+        python3 -m pip install --upgrade build
+        python3 -m build
+        
+    - name: Obtention du nom du fichier
+      id: get_wheel_filename
+      working-directory: library/cppcount/dist
+      run: |
+        echo "::set-output name=filename::$(ls *.whl)"
+      
+    - name: Téléversement du fichier
+      id: upload-release-asset 
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.get_release_info.outputs.upload_url }}
+        asset_path: library/cppcount/dist/${{steps.get_wheel_filename.outputs.filename}}
+        asset_name: ${{steps.get_wheel_filename.outputs.filename}}
+        asset_content_type: application/octet-stream      
