--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Installation des dépendances du système
         run: | 
           sudo apt-get update
-          sudo apt-get install ninja-build cmake build-essential python3
+          sudo apt-get install ninja-build cmake build-essential python3 python3-venv
     
       - name: Création du dossier de compilation
         working-directory: library/benchmarks
