--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -29,41 +29,33 @@ jobs:
           cmake ..
           make
 
-      - name: Package Python pycount
-        working-directory: library/pycount
-        run: |
-          python3 -m pip install --upgrade pip
-          python3 -m pip install --upgrade build
-          python3 -m build
-          
-      - name: Package Python cppcount-pybind11
-        working-directory: library/cppcount
-        run: |
-          python3 -m pip install --upgrade pip
-          python3 -m pip install --upgrade build
-          python3 -m build
-
       - name: Création des venvs
         working-directory: library/benchmarks
         run: |
           python3 -m venv venv-pycount
           python3 -m venv venv-cppcount-pybind11
-
-      - name: Exécution du benchmark cppcount
-        working-directory: library/benchmarks/build
-        run: |
-          ./benchmark_cppcount
           
-      - name: Exécution du benchmark pycount
+      - name: Installation pour pycount
         working-directory: library/benchmarks
         run: |
           source ./venv-pycount/bin/activate
-          python3 -m pip install ../pycount/dist/pycount-dev-py3-none-any.whl
-          python3 benchmark_pycount.py
-
-      - name: Exécution du benchmark cppcount-pybind11
+          python3 -m pip install --upgrade pip
+          python3 -m pip install --upgrade build
+          python3 -m pip install ../pycount
+       
+      - name: Installation pour cppcount-pybind11
         working-directory: library/benchmarks
         run: |
           source ./venv-cppcount-pybind11/bin/activate
-          python3 -m pip install ../cppcount/dist/cppcount_pybind11-dev-*.whl
-          python3 benchmark_cppcount_pybind11.py
+          python3 -m pip install --upgrade pip
+          python3 -m pip install --upgrade build
+          python3 -m pip install ../cppcount
+
+      - name: Exécution des benchmarks 
+        working-directory: library/benchmarks/build
+        run: |
+          ./benchmark_cppcount
+          source ../venv-pycount/bin/activate
+          python3 ../benchmark_pycount.py
+          source ../venv-cppcount-pybind11/bin/activate
+          python3 ../benchmark_cppcount_pybind11.py
