--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -50,8 +50,12 @@ jobs:
       - name: Exécution des benchmarks 
         working-directory: library/benchmarks/build
         run: |
-          ./benchmark_cppcount
+          echo "cppcount" >> results.txt
+          ./benchmark_cppcount >> results.txt
+          echo "pycount" >> results.txt
           source ../venv-pycount/bin/activate
-          python3 ../benchmark_pycount.py
+          python3 ../benchmark_pycount.py >> results.txt
+          echo "cppcount-pybind11" >> results.txt
           source ../venv-cppcount-pybind11/bin/activate
-          python3 ../benchmark_cppcount_pybind11.py
+          python3 ../benchmark_cppcount_pybind11.py >> results.txt
+          cat results.txt
