--- a/.github/workflows/build_test_and_release.yml
+++ b/.github/workflows/build_test_and_release.yml
@@ -345,3 +345,78 @@ jobs:
         asset_name: ${{steps.get_wheel_filename.outputs.filename}}
         asset_content_type: application/octet-stream
       
+  upload_benchmark:
+    needs: create_release
+    runs-on: ubuntu-latest
+    
+    steps:
+      - name: Obtention du code
+        uses: actions/checkout@v2
+        with:
+          submodules: recursive
+
+      - name: Installation des dépendances du système
+        run: | 
+          sudo apt-get update
+          sudo apt-get install ninja-build cmake build-essential python3 python3-venv
+    
+      - name: Création du dossier de compilation
+        working-directory: library/benchmarks
+        run: |
+          mkdir build
+
+      - name: Compilation
+        working-directory: library/benchmarks/build
+        run: |
+          cmake ..
+          make
+
+      - name: Création des venvs
+        working-directory: library/benchmarks
+        run: |
+          python3 -m venv venv-pycount
+          python3 -m venv venv-cppcount-pybind11
+          
+      - name: Installation pour pycount
+        working-directory: library/benchmarks
+        run: |
+          source ./venv-pycount/bin/activate
+          python3 -m pip install ../pycount
+       
+      - name: Installation pour cppcount-pybind11
+        working-directory: library/benchmarks
+        run: |
+          source ./venv-cppcount-pybind11/bin/activate
+          python3 -m pip install ../cppcount
+
+      - name: Exécution des benchmarks 
+        working-directory: library/benchmarks/build
+        run: |
+          echo "cppcount" >> benchmarks.txt
+          ./benchmark_cppcount >> benchmarks.txt
+          echo "pycount" >> benchmarks.txt
+          source ../venv-pycount/bin/activate
+          python3 ../benchmark_pycount.py >> benchmarks.txt
+          echo "cppcount-pybind11" >> benchmarks.txt
+          source ../venv-cppcount-pybind11/bin/activate
+          python3 ../benchmark_cppcount_pybind11.py >> benchmarks.txt
+          cat benchmarks.txt
+      
+      - uses: actions/download-artifact@v2
+        with:
+          name: release_url
+      - name: Obtention de release_url
+        id: get_release_info
+        run: |
+          echo "::set-output name=upload_url::$(cat release_url.txt)"
+
+      - name: Téléversement du fichier benchmarks.txt
+        id: upload-release-asset 
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.get_release_info.outputs.upload_url }}
+          asset_path: library/benchmarks/build/benchmarks.txt
+          asset_name: benchmarks.txt
+          asset_content_type: text/plain
