--- a/.github/workflows/build_test_and_release.yml
+++ b/.github/workflows/build_test_and_release.yml
@@ -142,7 +142,7 @@ jobs:
           release_name: demo_integration-v${{ steps.generate_version_output.outputs.version }}
           body: |
               Dernière compilation de demo_integration.
-          draft: true
+          draft: false
           prerelease: true
 
       - name: Écriture du fichier pour la destination du release.
