--- a/.github/workflows/firmware_tests.yml
+++ b/.github/workflows/firmware_tests.yml
@@ -1,20 +1,23 @@
-# This is a basic workflow to help you get started with Actions
 name: Test de compilation du Firmware
 
 on:
   workflow_dispatch:
-    branches: [main]
-    
   pull_request:
-    branches: [dev, main]
+    branches: [ main ]
     
 jobs:
   build:
-
     runs-on: ubuntu-latest
-  
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-    - uses: arduino/compile-sketches@v1
+    
+    - name: Obtention du code
+      uses: actions/checkout@v2
+      with:
+        submodules: recursive
+        
+    - name: Compilation     
+      uses: arduino/compile-sketches@v1
       with:
         fqbn: 'arduino:avr:uno'
+        sketch-paths: '- firmware'
+        verbose: True
